// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs
// https://dbdiagram.io/

Table users {
  id integer [primary key]
  username varchar
  email varchar
  name varchar
  last_name varchar
  password varchar
}

Table grupos {
  id integer [primary key]
  asignatura_id integer [not null]
  users_id integer [not null, note: 'maestro id']
  archivar bool
  nombre varchar
}

Table grupo_user {
  id integer [primary key]
  user_id integer [not null]
  grupo_id integer [not null]
}

Table asignaturas {
  id integer [primary key]
  nombre varchar
  indexes {
    nombre [unique]
  }
}

Ref: "users"."id" < "grupo_user"."user_id"

Ref: "grupos"."id" < "grupo_user"."grupo_id"

Ref: "asignaturas"."id" < "grupos"."asignatura_id"

Ref: "users"."id" < "grupos"."users_id"
